fixes to tribune title overlapping over city and comp data, fix national widget from pointing amex to nyse -> amex to amex list

--- a/css/snt_local_w_tribune.css
+++ b/css/snt_local_w_tribune.css
@@ -98,14 +98,14 @@ button:focus {
 
 .fgw-t1{
   top: 0;
-  font-size:20px;
+  font-size:18px;
   text-align: left;
   overflow: hidden;
   text-align: left;
   color:#676767;
   font-family: Belizio,Georgia,serif;
   font-weight:bold;
-  padding-left: 40px;
+  padding-left: 30px;
 }
 .fgw-t2{
   margin-top: 3px;
